[package]
name = "Dimport"
version = "2025.7.10"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
